--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,25 @@
 [package]
 name = "zero2prod"
 version = "0.1.0"
+authors = ["LukeMathWalker <rust@lpalmieri.com>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "zero2prod"
 
 [dependencies]
+actix-web = "4"
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+serde = "1.0.115"
+config = { version = "0.11", default-features = false, features = ["yaml"] }
+sqlx = { version = "0.5.5", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
+uuid = { version = "0.8.1", features = ["v4"] }
+chrono = "0.4.15"
+
+[dev-dependencies]
+reqwest = { version = "0.11", features = ["json"] }
